[project]
name = "handsdown"
version = "2.1.0"
description = "Python docstring-based documentation generator for lazy perfectionists."
authors = [{ name = "Vlad Emelianov", email = "vlad.emelianov.nz@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["autodoc", "documentation", "generator", "markdown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "importlib-resources",
    "jinja2",
    "black",
]


[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "pyright",
    "pytest-cov",
    "pytest",
    "types-setuptools"
]
package = true

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["handsdown", "handsdown.*"]

[project.scripts]
handsdown = 'handsdown.main:main'

[project.urls]
Homepage = "https://vemel.github.io/handsdown"
Documentation = "https://vemel.github.io/handsdown"
Repository = "https://github.com/vemel/handsdown"
Changelog = "https://github.com/vemel/handsdown/releases"
Issues = "https://github.com/vemel/handsdown/issues"

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
ignore_errors = true
omit = ["tests/*"]

[[tool.mypy.overrides]]
module = "mypy-tests.*"
ignore_errors = true


[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ARG002",  # unused-argument
    "COM812",  # missing-trailing-comma
    "D107",    # undocumented-public-init
    "D200",    # fits-on-one-line
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "D406",    # new-line-after-section-name
    "D407",    # dashed-underline-after-section
    "D413",    # blank-line-after-last-section
    "D417",    # undocumented-param
    "DOC",     # pydoclint
    "EM",      # flake8-errmsg
    "ERA001",  # commented-out-code
    "FIX001",  # line-contains-fixme
    "G004",    # logging-f-string
    "INP001",  # implicit-namespace-package
    "ISC001",  # implicit-str-concat
    "PERF203", # try-except-in-loop
    "PLR0904", # too-many-public-methods
    "PLR0913", # too-many-arguments
    "PLR6301", # no-self-use
    "S404",    # suspicious-subprocess-import
    "S603",    # subprocess-without-shell-equals-true
    "TD",      # flake8-todos
    "TRY003",  # raise-vanilla-args
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["*.pyi", "examples/*", "integration/*"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "D",       # missing-docstring
    "S101",    # use-of-assert
    "N803",    # argument-name-does-not-match
    "PLR2004", # constant-comparison
    "CPY001",  # missing-copyright
    "SLF001",  # private-member-access
]
"conftest.py" = [
    "D",       # missing-docstring
    "S101",    # use-of-assert
    "N803",    # argument-name-does-not-match
    "PLR2004", # constant-comparison
    "CPY001",  # missing-copyright
    "SLF001",  # private-member-access
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-copyright]
# author = "Vlad Emelianov"
min-file-size = 200
notice-rgx = "(?i)Copyright \\d{4}"

[tool.pyright]
include = ["handsdown"]
exclude = ["**/__pycache__", "tests", "typestubs"]
reportMissingImports = true
reportMissingTypeStubs = true
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.7"
