[project]
name = "handsdown-fork"
version = "0.1.0"
requires-python = ">=3.9"
description = "A fork of handsdown, the python docstring-based documentation generator for lazy perfectionists."
authors = [{ name = "FredHappyface" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["autodoc", "documentation", "generator", "markdown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "importlib-resources",
    "jinja2",
    "black",
    "basedpyright>=1.39.8",
    "typing-extensions>=4.12.2",
]


[dependency-groups]
dev = [
    "types-setuptools",
    "basedpyright>=1.39.7",
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]



[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["handsdown", "handsdown.*"]

[project.scripts]
handsdown = 'handsdown.main:main'

[project.urls]
Homepage = "https://vemel.github.io/handsdown"
Documentation = "https://vemel.github.io/handsdown"
Repository = "https://github.com/vemel/handsdown"
Changelog = "https://github.com/vemel/handsdown/releases"
Issues = "https://github.com/vemel/handsdown/issues"

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
ignore_errors = true
omit = ["tests/*"]



[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
	"COM812", # enforce trailing comma
	"D203",     # 
	"D212",     #  
	"D206",     # i want tabs 
	"D401",     # imperative mood
	"D1",     # temporarily ignore docstrings
	"ISC001",
	"TCH",    # type check blocks
	"W191",   # ignore this to allow tabs
	"EXE002", # The file is executable but no shebang is present
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["*.pyi", "examples/*", "integration/*"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "ALL",
    "ANN",     # missing-type-annotation
    "D",       # missing-docstring
    "S101",    # use-of-assert
    "N803",    # argument-name-does-not-match
    "PLR2004", # constant-comparison
    "CPY001",  # missing-copyright
    "SLF001",  # private-member-access
]
"conftest.py" = [
    "D",       # missing-docstring
    "S101",    # use-of-assert
    "N803",    # argument-name-does-not-match
    "PLR2004", # constant-comparison
    "CPY001",  # missing-copyright
    "SLF001",  # private-member-access
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

include = ["handsdown"]
exclude = ["**/__pycache__", "tests", "typestubs"]
reportMissingImports = true
reportMissingTypeStubs = true
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
# pythonVersion = "3.9"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py314
	py313
	py312


[testenv]
deps = pytest
commands = pytest tests
"""
